fix: adjusted tab's spacings

--- a/frontend/src/components/SeedlotRegistrationSteps/ParentTreeStep/styles.scss
+++ b/frontend/src/components/SeedlotRegistrationSteps/ParentTreeStep/styles.scss
@@ -1,8 +1,10 @@
 @use '../../../theme/variables.scss' as vars;
 
 .seedlot-parent-tree-step {
+  // TODO: find a way to remove negative margins
   .#{vars.$bcgov-prefix}--tabs {
-    margin-left: -2.5rem;
+    margin-left: -1rem;
+    margin-bottom: 2.5rem;
   }
 
   .#{vars.$bcgov-prefix}--tabs .#{vars.$bcgov-prefix}--tabs__nav-link {
